@@ -18,11 +18,7 @@
 
 package org.springframework.osgi.util;
 
-import org.osgi.framework.BundleContext;
-import org.osgi.framework.InvalidSyntaxException;
-import org.osgi.framework.ServiceReference;
 import org.osgi.framework.ServiceRegistration;
-import org.springframework.util.Assert;
 
 /**
  * Utility class offering easy access to OSGi services.
@@ -30,55 +26,7 @@ import org.springframework.util.Assert;
  * @author Adrian Colyer
  * @author Costin Leau
  */
-// FIXME: removed deprecated methods
 public abstract class OsgiServiceUtils {
-
-	/**
-	 * Return all of the service references for services of the given type and
-	 * matching the given filter. Returned services may use interface versions
-	 * that are incompatible with the given context.
-	 * 
-	 * @param context
-	 * @param serviceClass
-	 * @param filter
-	 * @throws IllegalArgumentException if the filter string is non-null and is
-	 * not well-formed
-	 */
-	/**
-	 * @deprecated - will be removed in 1.0 final.
-	 */
-	public static ServiceReference[] getAllServices(BundleContext context, Class serviceClass, String filter)
-			throws IllegalArgumentException {
-		try {
-			ServiceReference[] serviceReferences = context.getAllServiceReferences(serviceClass.getName(), filter);
-			return serviceReferences;
-		}
-		catch (InvalidSyntaxException ex) {
-			throw (IllegalArgumentException) new IllegalArgumentException(ex.getMessage()).initCause(ex);
-		}
-	}
-
-	/**
-	 * @deprecated - will be removed in 1.0 final.
-	 */
-	public static Object getService(BundleContext context, ServiceReference reference) {
-		Assert.notNull(context);
-
-		if (reference == null)
-			return null;
-
-		try {
-			return context.getService(reference);
-		}
-		finally {
-			try {
-				// context.ungetService(reference);
-			}
-			catch (IllegalStateException isex) {
-				// do nothing
-			}
-		}
-	}
 
 	/**
 	 * Unregisters the given service registration from the given bundle. Returns
